--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ repositories {
     maven {
         url "http://dl.bintray.com/lukaville/maven"
     }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -31,4 +32,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.nbsp:library:1.1'
     compile 'com.android.support:support-v4:24.2.0'
+    compile 'com.github.jksiezni.permissive:permissive:0.1'
+    compile 'com.afollestad.material-dialogs:core:0.9.0.1'
 }
