--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,13 +9,16 @@ android {
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 2
-        versionName "1.1-beta1"
+        versionName "1.1-alpha2"
     }
     buildTypes {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        abortOnError false
     }
 }
 
