--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,6 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-19
+    - sys-img-armeabi-v7a-android-24
 jdk:
     - oraclejdk8
