--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,16 @@ android {
         applicationId "xyz.iridiumion.enlightened"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 9
-        versionName "1.3-alpha2"
+        versionCode 12
+        versionName "1.3-alpha4"
     }
     buildTypes {
         release {
             minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        releaseNoObfuscate {
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
