--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,7 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-19
     - sys-img-armeabi-v7a-android-24
+    
+    - extra-android-m2repository
 jdk:
     - oraclejdk8
