--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,9 @@ android:
     - extra-android-m2repository
 jdk:
     - oraclejdk8
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
