--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "xyz.iridiumion.enlightened"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 21
-        versionName "1.6-beta3"
+        versionCode 24
+        versionName "1.7-alpha1"
     }
     buildTypes {
         release {
